# Rust-SSO

./: Cargo.toml  README.md
src/: db.rs  errors.rs  main.rs
src/auth/: discord.rs  handlers.rs  mod.rs  routes.rs
src/auth/models/: session.rs  user.rs
src/oauth2/: handlers.rs  mod.rs  routes.rs
src/oauth2/models/: client.rs
static/css/: style.css
templates/: additional.html.hbs  index.html.hbs
